project(src)

set(HEADER_FILES models/bookmark_model.cpp models/bookmark_model.h models/application_model.cpp models/application_model.h views/application_view/application_view.cpp views/application_view/application_view.h views/add_bookmark_view/add_bookmark_view.cpp views/add_bookmark_view/add_bookmark_view.h controllers/add_bookmark_controller.cpp controllers/add_bookmark_controller.h views/bookmarks_list_view/bookmarks_list_view.cpp views/bookmarks_list_view/bookmarks_list_view.h controllers/bookmarks_list_controller.cpp controllers/bookmarks_list_controller.h views/bookmark_view/bookmark_view.cpp views/bookmark_view/bookmark_view.h widgets/link_widget/link_widget.cpp widgets/link_widget/link_widget.h inkmark.cpp views/edit_bookmark_view/edit_bookmark_view.cpp views/edit_bookmark_view/edit_bookmark_view.h widgets/text_input_widget/text_input_widget.cpp widgets/text_input_widget/text_input_widget.h widgets/text_area_widget/text_area_widget.cpp widgets/text_area_widget/text_area_widget.h)

set(SOURCE_FILES models/bookmark_model.cpp models/bookmark_model.h models/application_model.cpp models/application_model.h views/application_view/application_view.cpp views/application_view/application_view.h views/add_bookmark_view/add_bookmark_view.cpp views/add_bookmark_view/add_bookmark_view.h controllers/add_bookmark_controller.cpp controllers/add_bookmark_controller.h views/bookmarks_list_view/bookmarks_list_view.cpp views/bookmarks_list_view/bookmarks_list_view.h controllers/bookmarks_list_controller.cpp controllers/bookmarks_list_controller.h views/bookmark_view/bookmark_view.cpp views/bookmark_view/bookmark_view.h widgets/link_widget/link_widget.cpp widgets/link_widget/link_widget.h inkmark.cpp views/edit_bookmark_view/edit_bookmark_view.cpp views/edit_bookmark_view/edit_bookmark_view.h widgets/text_input_widget/text_input_widget.cpp widgets/text_input_widget/text_input_widget.h widgets/text_area_widget/text_area_widget.cpp widgets/text_area_widget/text_area_widget.h)

add_library(src STATIC ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(src Qt5::Widgets)
