project(src)

set(HEADER_FILES models/bookmark_model.h models/application_model.h views/application_view/application_view.h views/add_bookmark_view/add_bookmark_view.h controllers/add_bookmark_controller/add_bookmark_controller.h views/bookmarks_list_view/bookmarks_list_view.h controllers/bookmarks_list_controller/bookmarks_list_controller.h views/bookmark_view/bookmark_view.h widgets/link_widget/link_widget.h views/edit_bookmark_view/edit_bookmark_view.h widgets/text_input_widget/text_input_widget.h widgets/text_area_widget/text_area_widget.h widgets/button_widget/button_widget.h views/search_bookmark_view/search_bookmark_view.h controllers/search_bookmark_controller/search_bookmark_controller.h controllers/application_controller/application_controller.h views/user_application_view/user_application_view.h controllers/user_application_controller/user_application_controller.h utilities/utilities.h)

set(SOURCE_FILES models/bookmark_model.cpp models/application_model.cpp views/application_view/application_view.cpp views/add_bookmark_view/add_bookmark_view.cpp controllers/add_bookmark_controller/add_bookmark_controller.cpp views/bookmarks_list_view/bookmarks_list_view.cpp controllers/bookmarks_list_controller/bookmarks_list_controller.cpp views/bookmark_view/bookmark_view.cpp widgets/link_widget/link_widget.cpp inkmark.cpp views/edit_bookmark_view/edit_bookmark_view.cpp widgets/text_input_widget/text_input_widget.cpp widgets/text_area_widget/text_area_widget.cpp widgets/button_widget/button_widget.cpp views/search_bookmark_view/search_bookmark_view.cpp controllers/search_bookmark_controller/search_bookmark_controller.cpp controllers/application_controller/application_controller.cpp views/user_application_view/user_application_view.cpp controllers/user_application_controller/user_application_controller.cpp utilities/utilities.cpp)

add_library(src STATIC ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(src Qt5::Widgets)
